@@ -1,7 +1,7 @@
 /*
  * PurchaseRestControllerIntegrationTest.java
  *
- * Copyright (C) 2016 Pavel Prokhorov (pavelvpster@gmail.com)
+ * Copyright (C) 2016-2018 Pavel Prokhorov (pavelvpster@gmail.com)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -20,6 +20,7 @@
 
 package org.interactiverobotics.grocery.rest;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import org.interactiverobotics.grocery.domain.Item;
 import org.interactiverobotics.grocery.domain.Purchase;
 import org.interactiverobotics.grocery.domain.Shop;
@@ -35,14 +36,19 @@ import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 /**
@@ -53,6 +59,12 @@ import static org.junit.Assert.assertTrue;
 @RunWith(SpringRunner.class)
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class PurchaseRestControllerIntegrationTest {
+
+    private static final String PURCHASE_ENDPOINT = "/api/v1/purchase/";
+    private static final String BUY_ACTION = "/buy/";
+    private static final String RETURN_ACTION = "/return/";
+    private static final String PRICE_ACTION = "/price/";
+    private static final String QUANTITY_1 = "?quantity=1";
 
     @Autowired
     private TestRestTemplate restTemplate;
@@ -76,8 +88,13 @@ public class PurchaseRestControllerIntegrationTest {
     private Item item;
 
 
+    /**
+     * Initializes test.
+     */
     @Before
     public void setUp() throws Exception {
+
+        purchaseRepository.deleteAll();
 
         shop = shopRepository.save(new Shop("test-shop"));
 
@@ -86,6 +103,9 @@ public class PurchaseRestControllerIntegrationTest {
         item = itemRepository.save(new Item("test-item"));
     }
 
+    /**
+     * Finalises test.
+     */
     @After
     public void tearDown() throws Exception {
 
@@ -98,10 +118,54 @@ public class PurchaseRestControllerIntegrationTest {
 
 
     @Test
+    public void testGetNotPurchasedItems() {
+
+        final List<Item> existingItems = new ArrayList<>();
+        itemRepository.saveAll(Arrays.asList(new Item("test-item-1"), new Item("test-item-2")))
+                .forEach(item -> existingItems.add(item));
+
+        final Purchase purchase = purchaseRepository.save(new Purchase(visit, existingItems.get(0), 1L, null));
+
+        final ResponseEntity<Item[]> response = restTemplate.getForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + "/not_purchased_items", Item[].class);
+
+        purchaseRepository.delete(purchase);
+
+        itemRepository.deleteAll(existingItems);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(response.hasBody());
+        assertTrue(Arrays.asList(response.getBody()).contains(existingItems.get(1)));
+    }
+
+    @Test
+    public void testGetPurchasesPage() {
+
+        final List<Purchase> existingPurchases = new ArrayList<>();
+        for (long i = 0; i < 100; i ++) {
+            existingPurchases.add(purchaseRepository.save(new Purchase(visit, item, 1L, null)));
+        }
+
+        final ParameterizedTypeReference<PageResponse<Purchase>> responseType =
+                new ParameterizedTypeReference<PageResponse<Purchase>>() {};
+        final ResponseEntity<PageResponse<Purchase>> response = restTemplate.exchange(PURCHASE_ENDPOINT
+                        + visit.getId() + "/list?page=1&size=10", HttpMethod.GET, null, responseType);
+
+        purchaseRepository.deleteAll(existingPurchases);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(response.hasBody());
+        assertEquals(existingPurchases.size(), response.getBody().getTotalElements());
+        assertEquals(10, response.getBody().getTotalPages());
+        assertEquals(10, response.getBody().getSize());
+    }
+
+    @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
+    @Test
     public void testBuyItem() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/buy/" + item.getId() + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + BUY_ACTION + item.getId() + QUANTITY_1, null, Purchase.class);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertTrue(response.hasBody());
@@ -110,7 +174,7 @@ public class PurchaseRestControllerIntegrationTest {
 
         assertEquals(visit, response.getBody().getVisit());
         assertEquals(item, response.getBody().getItem());
-        assertEquals(new Long(1L), response.getBody().getQuantity());
+        assertEquals(Long.valueOf(1L), response.getBody().getQuantity());
     }
 
     @Test
@@ -118,8 +182,8 @@ public class PurchaseRestControllerIntegrationTest {
 
         final Purchase existingPurchase = purchaseRepository.save(new Purchase(visit, item, 1L, null));
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/buy/" + item.getId() + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + BUY_ACTION + item.getId() + QUANTITY_1, null, Purchase.class);
 
         purchaseRepository.delete(existingPurchase);
 
@@ -127,14 +191,14 @@ public class PurchaseRestControllerIntegrationTest {
         assertTrue(response.hasBody());
         assertEquals(visit, response.getBody().getVisit());
         assertEquals(item, response.getBody().getItem());
-        assertEquals(new Long(2L), response.getBody().getQuantity());
+        assertEquals(Long.valueOf(2L), response.getBody().getQuantity());
     }
 
     @Test
     public void testBuyItemForWrongVisitId() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + new Long(999L)
-                + "/buy/" + item.getId() + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + new Long(999L)
+                + BUY_ACTION + item.getId() + QUANTITY_1, null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -142,8 +206,8 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testBuyItemForWrongItemId() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/buy/" + new Long(999L) + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + BUY_ACTION + new Long(999L) + QUANTITY_1, null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -151,8 +215,8 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testBuyItemForWrongQuantity() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/buy/" + item.getId() + "?quantity=0", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + BUY_ACTION + item.getId() + "?quantity=0", null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -160,17 +224,18 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testBuyItemForWrongPrice() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/buy/" + item.getId() + "?quantity=1&price=0", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + BUY_ACTION + item.getId() + "?quantity=1&price=0", null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
+    @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
     @Test
     public void testBuyItemSetPriceForNewPurchase() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/buy/" + item.getId() + "?quantity=1&price=10", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + BUY_ACTION + item.getId() + "?quantity=1&price=10", null, Purchase.class);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertTrue(response.hasBody());
@@ -185,8 +250,8 @@ public class PurchaseRestControllerIntegrationTest {
 
         final Purchase existingPurchase = purchaseRepository.save(new Purchase(visit, item, 1L, null));
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/buy/" + item.getId() + "?quantity=1&price=10", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + BUY_ACTION + item.getId() + "?quantity=1&price=10", null, Purchase.class);
 
         purchaseRepository.delete(existingPurchase);
 
@@ -201,8 +266,8 @@ public class PurchaseRestControllerIntegrationTest {
         final Purchase existingPurchase = purchaseRepository
                 .save(new Purchase(visit, item, 1L, BigDecimal.valueOf(10L)));
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/buy/" + item.getId() + "?quantity=1&price=20", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + BUY_ACTION + item.getId() + "?quantity=1&price=20", null, Purchase.class);
 
         purchaseRepository.delete(existingPurchase);
 
@@ -216,8 +281,8 @@ public class PurchaseRestControllerIntegrationTest {
 
         final Purchase existingPurchase = purchaseRepository.save(new Purchase(visit, item, 2L, null));
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/return/" + item.getId() + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + RETURN_ACTION + item.getId() + QUANTITY_1, null, Purchase.class);
 
         purchaseRepository.delete(existingPurchase);
 
@@ -225,14 +290,14 @@ public class PurchaseRestControllerIntegrationTest {
         assertTrue(response.hasBody());
         assertEquals(visit, response.getBody().getVisit());
         assertEquals(item, response.getBody().getItem());
-        assertEquals(new Long(1L), response.getBody().getQuantity());
+        assertEquals(Long.valueOf(1L), response.getBody().getQuantity());
     }
 
     @Test
     public void testReturnItemForWrongVisitId() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + new Long(999L)
-                + "/return/" + item.getId() + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + new Long(999L)
+                + RETURN_ACTION + item.getId() + QUANTITY_1, null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -240,8 +305,8 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testReturnItemForWrongItemId() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/return/" + new Long(999L) + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + RETURN_ACTION + new Long(999L) + QUANTITY_1, null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -249,8 +314,8 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testReturnItemForNotExistingPurchase() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/return/" + item.getId() + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + RETURN_ACTION + item.getId() + QUANTITY_1, null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -258,8 +323,8 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testReturnItemForWrongQuantity1() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/return/" + item.getId() + "?quantity=0", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + RETURN_ACTION + item.getId() + "?quantity=0", null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -269,8 +334,8 @@ public class PurchaseRestControllerIntegrationTest {
 
         final Purchase existingPurchase = purchaseRepository.save(new Purchase(visit, item, 1L, null));
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/return/" + item.getId() + "?quantity=999", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + RETURN_ACTION + item.getId() + "?quantity=999", null, Purchase.class);
 
         purchaseRepository.delete(existingPurchase);
 
@@ -282,12 +347,12 @@ public class PurchaseRestControllerIntegrationTest {
 
         final Purchase existingPurchase = purchaseRepository.save(new Purchase(visit, item, 1L, null));
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/return/" + item.getId() + "?quantity=1", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + RETURN_ACTION + item.getId() + QUANTITY_1, null, Purchase.class);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
 
-        assertNull(purchaseRepository.findOne(existingPurchase.getId()));
+        assertFalse(purchaseRepository.findById(existingPurchase.getId()).isPresent());
     }
 
     @Test
@@ -295,8 +360,8 @@ public class PurchaseRestControllerIntegrationTest {
 
         final Purchase existingPurchase = purchaseRepository.save(new Purchase(visit, item, 1L, null));
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/price/" + item.getId() + "?price=10", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + PRICE_ACTION + item.getId() + "?price=10", null, Purchase.class);
 
         purchaseRepository.delete(existingPurchase);
 
@@ -308,8 +373,8 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testUpdatePriceForWrongVisitId() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + new Long(999L)
-                + "/price/" + item.getId() + "?price=10", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + new Long(999L)
+                + PRICE_ACTION + item.getId() + "?price=10", null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -317,8 +382,8 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testUpdatePriceForWrongItemId() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/price/" + new Long(999L) + "?price=10", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + PRICE_ACTION + new Long(999L) + "?price=10", null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
@@ -326,10 +391,9 @@ public class PurchaseRestControllerIntegrationTest {
     @Test
     public void testUpdatePriceForWrongPrice() {
 
-        final ResponseEntity<Purchase> response = restTemplate.postForEntity("/api/v1/purchase/" + visit.getId()
-                + "/price/" + item.getId() + "?price=0", null, Purchase.class);
+        final ResponseEntity<Purchase> response = restTemplate.postForEntity(PURCHASE_ENDPOINT + visit.getId()
+                + PRICE_ACTION + item.getId() + "?price=0", null, Purchase.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
-
 }
