@@ -1,7 +1,7 @@
 /*
  * PurchaseServiceTest.java
  *
- * Copyright (C) 2016 Pavel Prokhorov (pavelvpster@gmail.com)
+ * Copyright (C) 2016-2018 Pavel Prokhorov (pavelvpster@gmail.com)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -20,11 +20,6 @@
 
 package org.interactiverobotics.grocery.service;
 
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.eq;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 import org.interactiverobotics.grocery.domain.Item;
 import org.interactiverobotics.grocery.domain.Purchase;
 import org.interactiverobotics.grocery.domain.Shop;
@@ -35,28 +30,35 @@ import org.interactiverobotics.grocery.exception.VisitNotFoundException;
 import org.interactiverobotics.grocery.repository.ItemRepository;
 import org.interactiverobotics.grocery.repository.PurchaseRepository;
 import org.interactiverobotics.grocery.repository.VisitRepository;
-import org.junit.*;
+import org.junit.Before;
+import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.invocation.InvocationOnMock;
-import org.mockito.runners.MockitoJUnitRunner;
 import org.mockito.stubbing.Answer;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.test.context.junit4.SpringRunner;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 /**
  * Purchase service test.
  */
-@RunWith(MockitoJUnitRunner.class)
+@RunWith(SpringRunner.class)
 public class PurchaseServiceTest {
 
     @Mock
@@ -70,26 +72,25 @@ public class PurchaseServiceTest {
 
     private PurchaseService purchaseService;
 
-    private Shop shop;
-
     private Visit visit;
 
     private Item item;
 
 
+    /**
+     * Initializes test.
+     */
     @Before
     public void setUp() throws Exception {
 
         purchaseService = new PurchaseService(visitRepository, itemRepository, purchaseRepository);
 
-        shop = new Shop(1L, "test-shop");
-
-        visit = new Visit(1L, shop);
+        visit = new Visit(1L, new Shop(1L, "test-shop"));
 
         item = new Item(1L, "test-item");
 
-        when(visitRepository.findOne(visit.getId())).thenReturn(visit);
-        when(itemRepository.findOne(item.getId())).thenReturn(item);
+        when(visitRepository.findById(visit.getId())).thenReturn(Optional.of(visit));
+        when(itemRepository.findById(item.getId())).thenReturn(Optional.of(item));
     }
 
 
@@ -159,7 +160,7 @@ public class PurchaseServiceTest {
         @Override
         public Page<Purchase> answer(InvocationOnMock invocation) throws Throwable {
             assertEquals(2, invocation.getArguments().length);
-            final Pageable pageable = invocation.getArgumentAt(0, Pageable.class);
+            final Pageable pageable = invocation.getArgument(0);
             return new PageImpl<>(purchases, pageable, purchases.size());
         }
     }
@@ -176,7 +177,7 @@ public class PurchaseServiceTest {
         final PurchasePageAnswer purchasePageAnswer = new PurchasePageAnswer(existingPurchases);
         when(purchaseRepository.findAllByVisit(any(Pageable.class), eq(visit))).thenAnswer(purchasePageAnswer);
 
-        final Page<Purchase> purchases = purchaseService.getPurchases(new PageRequest(0, 10), visit.getId());
+        final Page<Purchase> purchases = purchaseService.getPurchases(PageRequest.of(0, 10), visit.getId());
 
         assertEquals(existingPurchases.size(), purchases.getTotalElements());
         assertEquals(10, purchases.getTotalPages());
@@ -193,7 +194,7 @@ public class PurchaseServiceTest {
         final PurchasePageAnswer purchasePageAnswer = new PurchasePageAnswer(existingPurchases);
         when(purchaseRepository.findAllByVisit(any(Pageable.class), eq(visit))).thenAnswer(purchasePageAnswer);
 
-        final Page<Purchase> purchases = purchaseService.getPurchases(new PageRequest(0, 10), visit);
+        final Page<Purchase> purchases = purchaseService.getPurchases(PageRequest.of(0, 10), visit);
 
         assertEquals(existingPurchases.size(), purchases.getTotalElements());
         assertEquals(10, purchases.getTotalPages());
@@ -211,7 +212,7 @@ public class PurchaseServiceTest {
         @Override
         public Purchase answer(InvocationOnMock invocation) throws Throwable {
             assertEquals(1, invocation.getArguments().length);
-            purchase = invocation.getArgumentAt(0, Purchase.class);
+            purchase = invocation.getArgument(0);
             if (purchase.getId() == null) {
                 purchase.setId(1L);
             }
@@ -280,7 +281,7 @@ public class PurchaseServiceTest {
         // Check response content
         assertEquals(visit, purchase.getVisit());
         assertEquals(item, purchase.getItem());
-        assertEquals(new Long(2), purchase.getQuantity());
+        assertEquals(Long.valueOf(2), purchase.getQuantity());
         assertNull(purchase.getPrice());
     }
 
@@ -376,7 +377,7 @@ public class PurchaseServiceTest {
         // Check response content
         assertEquals(visit, purchase.getVisit());
         assertEquals(item, purchase.getItem());
-        assertEquals(new Long(1L), purchase.getQuantity());
+        assertEquals(Long.valueOf(1L), purchase.getQuantity());
         assertNull(purchase.getPrice());
     }
 
@@ -398,7 +399,7 @@ public class PurchaseServiceTest {
         // Check response content
         assertEquals(visit, purchase.getVisit());
         assertEquals(item, purchase.getItem());
-        assertEquals(new Long(1L), purchase.getQuantity());
+        assertEquals(Long.valueOf(1L), purchase.getQuantity());
         assertNull(purchase.getPrice());
     }
 
@@ -504,5 +505,4 @@ public class PurchaseServiceTest {
 
         purchaseService.updatePrice(visit, item, BigDecimal.ZERO);
     }
-
 }
